feat[postgres] connected to database postgres

--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+###dubbo
 server.port=0
 dubbo.application.name=spring-dubbo-provider
 dubbo.protocol.name=dubbo
@@ -6,3 +7,12 @@ dubbo.registry.id=zk-registry
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.config-center.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
+
+###liquibase
+spring.liquibase.change-log=classpath:/db/liquibase/changelog.sql
+
+### database
+spring.datasource.url=jdbc:postgresql://localhost:5432/user-list
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
