--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -8,3 +8,9 @@ dubbo.config-center.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+
