fix[Prometheus & Grafana] fixed connection not being detected or allowed due to docker container being isolated from localhost, need specific ip address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,5 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_DATASOURCES_DEFAULT_NAME=prometheus
-      - GF_DATASOURCES_DEFAULT_URL=http://prometheus:9090
+      - GF_DATASOURCES_DEFAULT_URL=http://192.168.1.52:9090
       - GF_DATASOURCES_DEFAULT_ACCESS=proxy
