--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
   external_labels:
     monitor: 'codelab-monitor'
 
@@ -7,6 +7,11 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-  - job_name: 'dubbo'
+  - job_name: 'spring-dubbo-consumer'
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['192.168.1.52:39154']
+    metrics_path: "/actuator/prometheus"
+  - job_name: 'spring-dubbo-provider'
+    static_configs:
+      - targets: ['192.168.1.52:39155']
+    metrics_path: "/actuator/prometheus"
