--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -7,6 +7,10 @@ dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.config-center.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
+management.server.port=39154
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
