--- a/spring-dubbo-provider/pom.xml
+++ b/spring-dubbo-provider/pom.xml
@@ -26,6 +26,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+
         <!-- database -->
         <dependency>
             <groupId>org.postgresql</groupId>
