--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/user-list
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+### management
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
+management.server.port=39155
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
