feat[SLF4J] added loggers to the project

--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+### dubbo
 server.port=8080
 dubbo.application.name=spring-dubbo-consumer
 dubbo.protocol.name=dubbo
@@ -7,14 +8,23 @@ dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.config-center.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 
+### management
 management.metrics.export.prometheus.enabled=true
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
 management.server.port=39154
 
+### spring
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 
+#logging
+logging.level.root=info
+logging.level.org.springframework.web=INFO
+logging.level.guru.springframework.blogs.controllers=INFO
+logging.level.org.hibernate=ERROR
+logging.file.path=./spring-dubbo-consumer/logs/
+log4j.logger.org.thymeleaf=DEBUG
