--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -23,3 +23,10 @@ management.endpoint.prometheus.enabled=true
 management.server.port=39155
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.health.show-details=always
+
+#logging
+logging.level.root=info
+logging.level.org.springframework.web=INFO
+logging.level.guru.springframework.blogs.controllers=INFO
+logging.level.org.hibernate=ERROR
+logging.file.path=./spring-dubbo-provider/logs/
