--- a/spring-dubbo-provider/pom.xml
+++ b/spring-dubbo-provider/pom.xml
@@ -12,6 +12,9 @@
     <modelVersion>4.0.0</modelVersion>
     <properties>
         <java.version>17</java.version>
+        <!-- Test -->
+        <rider-core.version>1.35.0</rider-core.version>
+        <rider-spring.version>1.35.0</rider-spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,7 +41,6 @@
             <scope>runtime</scope>
         </dependency>
 
-
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
@@ -59,6 +61,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.github.database-rider</groupId>
+            <artifactId>rider-core</artifactId>
+            <version>${rider-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.database-rider</groupId>
+            <artifactId>rider-spring</artifactId>
+            <version>${rider-spring.version}</version>
             <scope>test</scope>
         </dependency>
 
