refactor: reorganized code and file structure to follow hexagonal driven port & facade design pattern

--- a/spring-dubbo-interface/pom.xml
+++ b/spring-dubbo-interface/pom.xml
@@ -10,4 +10,12 @@
     <artifactId>spring-dubbo-interface</artifactId>
     <modelVersion>4.0.0</modelVersion>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
 </project>
