--- a/spring-dubbo-provider/src/main/resources/app/ErrorMessages.properties
+++ b/spring-dubbo-provider/src/main/resources/app/ErrorMessages.properties
@@ -1,4 +1,4 @@
 ### Error messages
-APP-100-200=This has failed utterly
+APP-100-200=Incorrect username or password. Please try again.
 APP-100-300=Email address is invalid:
 APP-200-300=Wrong password
