refactor: restructured and renamed classes and methods to fit DDD Hex architecture

--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -9,7 +9,7 @@ dubbo.config-center.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 
 ###liquibase
-spring.liquibase.change-log=classpath:/db/liquibase/changelog.sql
+spring.liquibase.change-log=classpath:./db/liquibase/changelog.sql
 
 ### database
 spring.datasource.url=jdbc:postgresql://localhost:5432/user-list
