--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
+HELP.md
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij,maven,jetbrains+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,maven,jetbrains+all
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-HELP.md
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -130,7 +130,7 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -211,7 +211,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+#.mvn/wrapper/maven-wrapper.jar
 
 # Eclipse m2e generated files
 # Eclipse Core
