--- a/spring-dubbo-provider/pom.xml
+++ b/spring-dubbo-provider/pom.xml
@@ -12,6 +12,8 @@
     <modelVersion>4.0.0</modelVersion>
     <properties>
         <java.version>17</java.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <guava.version>31.1-jre</guava.version>
         <!-- Test -->
         <rider-core.version>1.35.0</rider-core.version>
         <rider-spring.version>1.35.0</rider-spring.version>
@@ -50,6 +52,18 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <!-- database -->
