--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 
 #logging
-logging.level.root=info
-logging.level.org.springframework.web=INFO
-logging.level.guru.springframework.blogs.controllers=INFO
-logging.level.org.hibernate=ERROR
-logging.file.path=./spring-dubbo-consumer/logs/
+#logging.level.root=info
+#logging.level.org.springframework.web=INFO
+#logging.level.guru.springframework.blogs.controllers=INFO
+#logging.level.org.hibernate=ERROR
+#logging.file.path=./spring-dubbo-consumer/logs/
