--- a/src/main/config/postgrest.conf
+++ b/src/main/config/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgres://postgres:123456@localhost:5432/user-list"
+db-uri = "postgres://postgres:123456@localhost:5432/spring_dubbo"
 db-schema = "public"
 db-anon-role = "postgres"
 server-port = 8090
