--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -12,7 +12,7 @@ dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 spring.liquibase.change-log=classpath:./db/liquibase/changelog.sql
 
 ### database
-spring.datasource.url=jdbc:postgresql://localhost:5432/user-list
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_dubbo
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
