fix: debugged thymeleaf not posting values to login and register controllers

--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -17,13 +17,10 @@ management.server.port=39154
 ### spring
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.prefix=classpath:/templates/
 
-#logging
-#logging.level.root=info
-#logging.level.org.springframework.web=INFO
-#logging.level.guru.springframework.blogs.controllers=INFO
-#logging.level.org.hibernate=ERROR
-#logging.file.path=./spring-dubbo-consumer/logs/
+###logging
+logging.level.root=info
+logging.level.org.springframework.web=INFO
+logging.level.guru.springframework.blogs.controllers=INFO
+logging.level.org.hibernate=ERROR
+logging.file.path=./spring-dubbo-consumer/logs/
