fix: debugged login not working after registeration success

--- a/spring-dubbo-provider/src/main/resources/application.properties
+++ b/spring-dubbo-provider/src/main/resources/application.properties
@@ -25,8 +25,7 @@ management.endpoints.web.exposure.include=prometheus
 management.endpoint.health.show-details=always
 
 #logging
-logging.level.root=info
-logging.level.org.springframework.web=INFO
-logging.level.guru.springframework.blogs.controllers=INFO
+logging.level.root=error
+spring.main.banner-mode=off
 logging.level.org.hibernate=ERROR
 logging.file.path=./spring-dubbo-provider/logs/
