--- a/spring-dubbo-consumer/pom.xml
+++ b/spring-dubbo-consumer/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>spring-dubbo-consumer</artifactId>
     <packaging>jar</packaging>
     <properties>
+        <thymeleaf-extras-java8time.version>3.0.4.RELEASE</thymeleaf-extras-java8time.version>
+        <thymeleaf-spring5.version>3.0.15.RELEASE</thymeleaf-spring5.version>
+        <!-- test -->
         <selenide.version>6.12.0</selenide.version>
     </properties>
     <dependencies>
@@ -19,17 +22,21 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
-            <version>3.0.15.RELEASE</version>
+            <version>${thymeleaf-spring5.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-java8time</artifactId>
-            <version>3.0.4.RELEASE</version>
+            <version>${thymeleaf-extras-java8time.version}</version>
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
