--- a/spring-dubbo-consumer/src/main/resources/application.properties
+++ b/spring-dubbo-consumer/src/main/resources/application.properties
@@ -19,8 +19,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 
 ###logging
-logging.level.root=info
-logging.level.org.springframework.web=INFO
-logging.level.guru.springframework.blogs.controllers=INFO
+logging.level.root=error
+spring.main.banner-mode=off
 logging.level.org.hibernate=ERROR
 logging.file.path=./spring-dubbo-consumer/logs/
